# rssrs

./: .prettierignore  .prettierrc.cjs  .prettierrc.json  .yarnrc.yml  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  globals.css  main.tsx
src-tauri/: .rustfmt.toml  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  events.rs  job.rs  main.rs  seed.rs
src-tauri/src/adapter/: mod.rs  rss.rs  t66y.rs
src/components/: AddSeedDialog.tsx  EditSeedDialog.tsx  Loading.tsx  SeedToggleItem.tsx  WatchListDialog.tsx
src/components/ArticleList/: ArticleCover.tsx  ArticleTile.tsx  index.tsx
src/components/ItemList/: ItemCover.tsx  ItemSkeleton.tsx  ItemTile.tsx  index.tsx
src/components/SettingsDialog/: GenericSettingsCard.tsx  ProxySettingsCard.tsx  WatchListCard.tsx  index.tsx
src/components/ui/: button.tsx  context-menu.tsx  dialog.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  sonner.tsx  toggle-group.tsx  toggle.tsx
src/lib/: bindings.ts  events.ts  useArticles.ts  useEvent.ts  useItems.ts  useSeedUnreadCount.ts  useSeeds.ts  useSettings.ts  useWatchList.ts
